--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import Footer from '../components/Footer.astro';
 ---
 
 <!doctype html>
@@ -13,6 +14,7 @@ import '../styles/global.css';
     </head>
     <body>
         <slot />
+        <Footer />
     </body>
 </html>
 
